# freewb

./: CMakeLists.txt  README.md  set_environment.cmake
modules/: CMakeLists.txt
modules/fcitx4/: CMakeLists.txt  fcitx-freewb-addon.conf.in  freewb.conf.in  im_module.cpp
modules/fcitx5/: CMakeLists.txt
modules/ibus/: CMakeLists.txt
modules/tsf/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
