if(OS_TYPE STREQUAL "linux")
    if(ENABLE_FCITX4)
        add_subdirectory(fcitx4)
    elseif(ENABLE_FCITX5)
        add_subdirectory(fcitx5)
    elseif(ENABLE_IBUS)
        add_subdirectory(ibus)
    endif()
elseif(OS_TYPE STREQUAL "win")
    if(ENABLE_TSF)
        add_subdirectory(tsf)
    endif()
endif()